--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">   <!--xmlns ns=name space*/-->
+<html lang="fr" xmlns:th="http://www.thymeleaf.org">   <!--xmlns ns=name space*/-->
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -11,6 +11,7 @@
     <title>Getting Started: Serving Web Content</title>
 </head>
 <body>
+<header th:insert="navigation.html :: header"></header>
 
 <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
