--- a/src/main/resources/templates/listetopos.html
+++ b/src/main/resources/templates/listetopos.html
@@ -16,71 +16,71 @@
 </head>
 
 <body>
-<div th:each ="topo : ${topos}">
-    <H1 th:utext="${topo.nomTopo}">...</H1>
-    <H3 th:utext="${topo.descritpionTopo}">...</H3>
-    <P th:utext="${topo.difficulteMax}">...</P>
-</div>
+<header th:insert="generique.html :: nav"></header>
+<H1 class="monTitre">Liste des TOPOS en vert (ctrl fichier main.CSS)</H1>
 
-
-<H1 class="monTitre">ce titre qui doit être vert (ctrl fichier main.CSS)</H1>
-<nav class="navbar navbar-expand-md navbar-light bg-light">   <!--navbar-expand-lg = étend la navbar sur ecran medium, *navbar-light = police gris clair, bg-light= fond gris clair-->
-    <a class="navbar-brand" href="index.html">    <!-- navbar-brand pour le logo/titre de la barre de navigation-->
-        <img src="../static/img/montagne-sm.png" width="60" height="35" class="d-inline-block align-top" alt="">
-        <strong>Les Amis de l'Escalade</strong>
-    </a>
-    <!--Balise button : bouton qui permet de basculer sur la balise ciblée par data-target  -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#MonCarousel" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>  <!--icone Hamburger-->
-    </button>
-    <div class="collapse navbar-collapse" id="MonCarousel">   <!--collapse navbar-collapse permet d'avoir un affichage en ligne-->
-        <ul class="navbar-nav ">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Accueil <span class="sr-only">(current)</span> </a>
-                <!-- fas pour FontAwesome Solide (dessin plein, les autres sont payants) -->
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="far fa-images"></i> Sites
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Faune</a>
-                    <a class="dropdown-item" href="#">Liste</a>
-                    <a class="dropdown-item" href="#">Recherche</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-tools"></i> Nouveautés</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#"><i class="fas fa-question-circle"></i> Autres (désactivé)</a> <!-- disabled = grisé et non activable -->
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">     <!--ml-auto = margin-left:auto qui cale une marge max à gauche-->
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-spin fa-envelope"></i> Contactez-moi</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
+    <nav class="navbar navbar-expand-md navbar-light bg-light">   <!--navbar-expand-lg = étend la navbar sur ecran large, *navbar-light = police gris clair, bg-light= fond gris clair-->
+        <a class="navbar-brand" href="index">    <!-- navbar-brand pour le logo/titre de la barre de navigation-->
+            <img src="../static/img/montagne-sm.png" width="60" height="35" class="d-inline-block align-top" alt="">
+            <strong>Les Amis de l'Escalade</strong>
+        </a>
+        <!--Balise button : bouton qui permet de basculer sur la balise ciblée par data-target  -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#MonCarousel" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>  <!--icone Hamburger-->
+        </button>
+        <div class="collapse navbar-collapse" id="MonCarousel">   <!--collapse navbar-collapse permet d'avoir un affichage en ligne-->
+            <ul class="navbar-nav ">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index"><i class="fas fa-home"></i> Accueil <span class="sr-only">(current)</span> </a>
+                    <!-- fas pour FontAwesome Solide (dessin plein, les autres sont payants) -->
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="far fa-images"></i> Sites
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Faune</a>
+                        <a class="dropdown-item" href="#">Liste</a>
+                        <a class="dropdown-item" href="#">Recherche</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-tools"></i> Nouveautés</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#"><i class="fas fa-question-circle"></i> Autres (désactivé)</a> <!-- disabled = grisé et non activable -->
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">     <!--ml-auto = margin-left:auto qui cale une marge max à gauche-->
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa fa-spin fa-envelope"></i> Contactez-moi</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 <div class="container">
     <br/>
-
-
     <h2>Pavage droit avec x colonnes</h2>
     <hr/>
     <br/>
 
+
+
+    <div th:each ="topo : ${topos}">
+        <H1 th:utext="${topo.nomTopo}">...</H1>
+        <H3 th:utext="${topo.descritpionTopo}">...</H3>
+        <P th:utext="${topo.difficulteMax}">...</P>
+    </div>
     <div class="card-columns">
-        <div class="card">
-            <img src="http://lorempixel.com/200/200/nature/5" class="card-img-top" alt="...">
+        <div class="card" th:each ="topo : ${topos}">
+            <img src="http://lorempixel.com/200/200/nature/5" class="card-img-top" th:title="${topo.difficulteMax}" alt="...">
             <div class="card-body">
-                <h5 class="card-title">La montée infernale</h5>
-                <P class="card-text">Site présentant une complexité graduelle. Un plaisir pour les débutants comme les confirmés.</P>
+                <h5 class="card-title" th:utext="${topo.nomTopo}">La montée infernale</h5>
+                <P class="card-text" th:utext="${topo.descritpionTopo}">Site présentant une complexité graduelle. Un plaisir pour les débutants comme les confirmés.</P>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">4b</div>
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 40%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">8a</div>
+                    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">4b</div>
+                    <!--<div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">4b</div>-->
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">8a</div>
                 </div>
                 <p class="card-text"><small class="text-muted">Alpes</small></p>
             </div>
@@ -153,11 +153,7 @@
 </div>
 <br/>
 
-<div class="container-fluid">
-    <footer class="page-footer bg-light pt-3 pb-3">
-        <div class="footer-copyright text-center">&copy; 2019 Copyright - Les Amis de l'Escalade</div>
-    </footer>
-</div>
+<footer th:insert="generique.html :: footer"></footer>
 
 <!-- Respecter l'ordre des scripts ; jQuery first, then Popper.js, then Bootstrap JS, puis notre propre script.js -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
