--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,49 +7,17 @@
     <meta name="keywords" content="escalade, topo, grimpeur">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS - A mettre en premier -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"/>
+    <!--<link rel="stylesheet" href="../static/css/main.css">-->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
 </head>
 
 <body>
-<H1 class="monTitre">ce titre qui doit être vert</H1>
-<nav class="navbar navbar-expand-md navbar-light bg-light">   <!--navbar-expand-lg = étend la navbar sur ecran medium, *navbar-light = police gris clair, bg-light= fond gris clair-->
-    <a class="navbar-brand" href="index.html">    <!-- navbar-brand pour le logo/titre de la barre de navigation-->
-        <img src="../static/img/montagne-sm.png" width="60" height="35" class="d-inline-block align-top" alt="">
-        <strong>Les Amis de l'Escalade</strong>
-    </a>
-    <!--Balise button : bouton qui permet de basculer sur la balise ciblée par data-target  -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#MonCarousel" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>  <!--icone Hamburger-->
-    </button>
-    <div class="collapse navbar-collapse" id="MonCarousel">   <!--collapse navbar-collapse permet d'avoir un affichage en ligne-->
-        <ul class="navbar-nav ">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Accueil <span class="sr-only">(current)</span> </a>
-                <!-- fas pour FontAwesome Solide (dessin plein, les autres sont payants) -->
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="far fa-images"></i> Sites
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Liste</a>
-                    <a class="dropdown-item" href="#">Recherche</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#"><i class="fas fa-question-circle"></i> Autres (désactivé)</a> <!-- disabled = grisé et non activable -->
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">     <!--ml-auto = margin-left:auto qui cale une marge max à gauche-->
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-spin fa-user"></i> S'identifier</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<header th:insert="generique.html :: nav"></header>
+<H1 class="monTitre">ce titre qui doit être vert...</H1>
+
 
 <div class="container">
     <br/>
@@ -106,11 +74,9 @@
 </div>
 <br/>
 
-<div class="container-fluid">
-    <footer class="page-footer bg-light pt-3 pb-3">
-        <div class="footer-copyright text-center">&copy; 2019 Copyright - Les Amis de l'Escalade</div>
-    </footer>
-</div>
+<hr>
+
+<footer th:insert="generique.html :: footer"></footer>
 
 <!-- Respecter l'ordre des scripts ; jQuery first, then Popper.js, then Bootstrap JS, puis notre propre script.js -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
