--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,23 +30,24 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <!--<img src="http://lorempixel.com/400/150/abstract/3" class="d-block w-100" alt="...">-->
-                    <!--<img src="http://placehold.it/1200x600" class="d-block w-100" alt="...">-->
-                    <img src="http://lorempixel.com/1200/800/abstract/3" class="d-block w-100" alt="...">
+                    <img src="http://placehold.it/1200x600" class="d-block w-100" alt="...">
+                    <!--<img src="http://lorempixel.com/1200/600/abstract/3" class="d-block w-100" alt="photo carrousel 1">-->
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <P>Les images affichées sont en 1200 x 800.</P>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="http://lorempixel.com/1200/800/abstract/2" class="d-block w-100" alt="...">
+                    <img src="http://placehold.it/1200x600" class="d-block w-100" alt="photo carrousel 2">
+                    <!--<img src="http://lorempixel.com/1200/800/abstract/2" class="d-block w-100" alt="photo carrousel 2">-->
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</P>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="http://lorempixel.com/1200/800/abstract/1" class="d-block w-100" alt="...">
+                    <img src="http://placehold.it/1200x600" class="d-block w-100" alt="photo carrousel 3">
+                    <!--<img src="http://lorempixel.com/1200/800/abstract/1" class="d-block w-100" alt="photo carrousel 3">-->
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <P>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</P>
@@ -67,10 +68,14 @@
     <br/>
 
     <div class="row justify-content-around">
-        <a href="#"><img src="http://lorempixel.com/200/200/cats/1" alt="..." class="rounded-circle">  </a>  <!-- rounded-circle = image ronde -->
-        <a href="#"><img src="http://lorempixel.com/200/200/cats/2" alt="..." class="rounded-circle">  </a>
-        <a href="#"><img src="http://lorempixel.com/200/200/cats/3" alt="..." class="rounded-circle">  </a>
+        <a href="#"><img src="http://placehold.it/200x200" alt="chat1" class="rounded-circle">  </a>  <!-- rounded-circle = image ronde -->
+        <a href="#"><img src="http://placehold.it/200x200" alt="chat2" class="rounded-circle">  </a>
+        <!--<a href="#"><img src="http://lorempixel.com/200/200/cats/3" alt="chat3" class="rounded-circle">  </a>-->
+        <a href="#"><img src="http://placehold.it/200x200" alt="chat3" class="rounded-circle">  </a>
+        <!--<img src="http://placehold.it/1200x600" class="d-block w-100" alt="...">-->
     </div>
+
+    <h3>Titre de bas de page avant le footer</h3>
 </div>
 <br/>
 
@@ -79,8 +84,13 @@
 <footer th:insert="generique.html :: footer"></footer>
 
 <!-- Respecter l'ordre des scripts ; jQuery first, then Popper.js, then Bootstrap JS, puis notre propre script.js -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- include javascript (tentative des remplacement des référence absolues par URL précédentes ci-dessous-->
+<script type="text/javascript" src="webjars/jquery/3.3.1/jquery.min.js/"></script>
+<script type="text/javascript" src="webjars/popper.js/1.14.3/popper.min.js"></script>
+<script type="text/javascript" src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+
 </body>
 </html>
