--- a/src/main/resources/templates/site.html
+++ b/src/main/resources/templates/site.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<header th:insert="generique.html :: nav"></header>
+<header th:replace="generique :: nav"></header>
 <H1 class="monTitre">Page de présentation d'un SITE</H1>
 
 <div class="container">
