--- a/src/main/resources/templates/ajoutertopo.html
+++ b/src/main/resources/templates/ajoutertopo.html
@@ -6,10 +6,10 @@
 <header th:replace="generique :: nav"></header>
 
 <div class="container">
-    <H1 class="monTitre">Liste des TOPOS en vert (ctrl fichier main.CSS)...</H1>
+    <H1 class="monTitre">Ajouter un topo</H1>
     <h2>Tableau lignes bicolores</h2>
 
-    <div class="container my-2" th:switch="${topos}">
+    <div th:switch="${topo}" class="container my-3">
         <div class="row">
             <div >
                 <h2 th:case="null">Aucun topo !</h2>
@@ -35,9 +35,8 @@
                                 <td th:text="${topo.dateParution}"></td>
                                 <td th:text="${topo.region.nomRegion}"></td>
                                 <td th:class="${topo.disponible}? 'text-success' : 'text-danger'" th:utext="${topo.disponible}? 'Oui' : 'Non'"></td>
-                                <!--<td><a class="btn btn-primary" th:href="@{/majtopo/{id}(id=${topo.topoid})}"><i class="fas fa-pencil-alt "></i></a></td>-->
-                                <td><a class="btn btn-primary" th:href="@{/majtopo/{id}(id=${topo.topoid})}"><i class="fas fa-pencil-alt "></i></a></td>
-                                <td><a class="btn btn-primary" th:href="@{/supprimertopo/{id}(id=${topo.topoid})}"><i class="far fa-trash-alt"></i></a></td>
+                                <td><a th:href="@{/edit/{id}(id=${topo.topoid})}" class="btn btn-primary"><i class="fas fa-pencil-alt "></i></a></td>
+                                <td><a th:href="@{/delete/{id}(id=${topo.topoid})}" class="btn btn-primary"><i class="far fa-trash-alt"></i></a></td>
                             </tr>
                             </tbody>
                         </table>
@@ -63,8 +62,8 @@
 <footer th:replace="generique :: footer"></footer>
 
 <!-- Respecter l'ordre des scripts ; jQuery first, then Popper.js, then Bootstrap JS, puis notre propre script.js -->
-<script src="webjars/jquery/3.3.1/jquery.min.js/" type="text/javascript"></script>
-<script src="webjars/popper.js/1.14.3/popper.min.js" type="text/javascript"></script>
-<script src="webjars/bootstrap/4.3.1/js/bootstrap.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="webjars/jquery/3.3.1/jquery.min.js/"></script>
+<script type="text/javascript" src="webjars/popper.js/1.14.3/popper.min.js"></script>
+<script type="text/javascript" src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
