--- a/src/main/resources/templates/list_users.html
+++ b/src/main/resources/templates/list_users.html
@@ -7,21 +7,21 @@
     <meta name="keywords" content="escalade, topo, grimpeur">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
 </head>
 
 <body>
-<header th:insert="generique.html :: nav"></header>
+<header th:replace="generique.html :: nav"></header>
 <H1 class="monTitre">Liste des USERS</H1>
 
-<div th:switch="${users}" class="container my-5">
+<div th:switch="${users}" class="container my-1">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-8">
             <h2 th:case="null">No users yet!</h2>
             <div th:case="*">
-                <h2 class="my-5">Users</h2>
+                <h2 class="my-1">Users : </h2>
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
@@ -32,25 +32,26 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="user : ${users}">
-                        <td th:text="${user.name}"></td>
-                        <td th:text="${user.email}"></td>
-                        <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
-                        <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
+                    <tr th:each="mesUsers : ${users}">
+                        <td th:text="${mesUsers.name}"></td>
+                        <td th:text="${mesUsers.email}"></td>
+                        <td><a th:href="@{/edit/{id}(id=${mesUsers.id})}" class="btn btn-primary"><i class="fas fa-edit ml-2"></i></a></td>
+                        <td><a th:href="@{/delete/{id}(id=${mesUsers.id})}" class="btn btn-primary"><i class="fas fa-times ml-2"></i></a></td>
                     </tr>
                     </tbody>
                 </table>
             </div>
-            <p class="my-5"><a href="/signup" class="btn btn-primary"><i class="fas fa-user-plus ml-2"></i></a></p>
+            <p class="my-5"><a href="/signup" class="btn btn-primary"><i class="fas fa-plus ml-2"></i>Ajouter user</a></p>
+
         </div>
     </div>
 </div>
 
 <hr>
 
-<footer th:insert="generique.html :: footer"></footer>
+<footer th:replace="generique :: footer"></footer>
 
-<script type="text/javascript" src="webjars/jquery/3.3.1/jquery.min.js/"></script>
-<script type="text/javascript" src="webjars/popper.js/1.14.3/popper.min.js"></script>
-<script type="text/javascript" src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/webjars/jquery/3.3.1/jquery.min.js/"></script>
+<script type="text/javascript" src="/webjars/popper.js/1.14.3/popper.min.js"></script>
+<script type="text/javascript" src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
