--- a/src/main/resources/templates/listesites.html
+++ b/src/main/resources/templates/listesites.html
@@ -15,18 +15,99 @@
 <body>
 <header th:insert="generique.html :: nav"></header>
 <H1 class="monTitre">longue liste des SITES avec critères</H1>
-
 <div class="container">
+    <br/>
+    <h2>Pavage droit avec x colonnes</h2>
+    <hr/>
 
 
+    <div class="card-columns">
+        <div class="card" th:each ="topo : ${topos}">
+            <img src="http://lorempixel.com/200/200/nature/5" class="card-img-top" th:title="${topo.nomTopo}" alt="...">
+            <div class="card-body">
+                <h5 class="card-title" th:utext="${topo.nomTopo}">La montée infernaleeeee</h5>
+                <P class="card-text" th:utext="${topo.descritpionTopo}">Site présentant une complexité graduelle. Un plaisir pour les débutants comme les confirmés.</P>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">4b</div>
+                    <!--<div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">4b</div>-->
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">22</div>
+                </div>
+                <p class="card-text"><small class="text-muted">Alpes</small></p>
+            </div>
+        </div>
+
+        <div class="card">
+            <a href="home.html"><img src="http://lorempixel.com/200/200/nature/1" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+                <h5 class="card-title">La montée infernale&&&&</h5>
+                <P class="card-text">Site présentant une complexité graduelle. Un plaisir pour les débutants comme les confirmés.</P>
+                <div class="progress">
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">4b</div>
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">7a</div>
+                </div>
+                <p class="card-text"><small class="text-muted">Alpes</small></p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="http://lorempixel.com/200/200/nature/2" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">La falaise de la muerta</h5>
+                <P class="card-text">Site d&acute;une grande compexité réservé aux pros.</P>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">5c</div>
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">9a</div>
+                </div>
+                <p class="card-text"><small class="text-muted">Alpes</small></p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="http://lorempixel.com/200/200/nature/2" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">La falaise de la muerta</h5>
+                <P class="card-text">Site d&acute;une grande compexité réservé aux pros.</P>
+                <div class="progress">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">5c</div>
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">9a</div>
+                </div>
+                <p class="card-text"><small class="text-muted">Alpes</small></p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="http://lorempixel.com/200/200/nature/3" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">La montée infernalerrrr</h5>
+                <P class="card-text">Site présentant une complexité graduelle. Un plaisir pour les débutants comme les confirmés.</P>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">4b</div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 40%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">8a</div>
+                </div>
+                <p class="card-text"><small class="text-muted">Alpes</small></p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="http://lorempixel.com/200/200/nature/4" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">La montée infernale</h5>
+                <P class="card-text">Site présentant une complexité graduelle. Un plaisir pour les débutants comme les confirmés.</P>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">4b</div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 40%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">8a</div>
+                </div>
+                <p class="card-text"><small class="text-muted">Alpes</small></p>
+            </div>
+        </div>
+
+
+    </div>
 </div>
+
 
 <hr>
 
-<footer th:insert="generique.html :: footer"></footer>
+<footer th:replace="generique.html :: footer"></footer>
 
-<!-- Respecter l'ordre des scripts ; jQuery first, then Popper.js, then Bootstrap JS, puis notre propre script.js -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script type="text/javascript" src="webjars/jquery/3.3.1/jquery.min.js/"></script>
+<script type="text/javascript" src="webjars/popper.js/1.14.3/popper.min.js"></script>
+<script type="text/javascript" src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
+</html>
