--- a/src/main/resources/templates/generique.html
+++ b/src/main/resources/templates/generique.html
@@ -51,7 +51,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuTopo" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="far fa-images"></i> Topos
+                        <i class="fas fa-book"></i> Topos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuTopo">
                         <a class="dropdown-item" href="/listetopos/utilisateur">Mes Topos</a>
