--- a/src/main/resources/templates/list_users.html
+++ b/src/main/resources/templates/list_users.html
@@ -21,7 +21,7 @@
         <div class="col-md-8">
             <h2 th:case="null">No users yet!</h2>
             <div th:case="*">
-                <h2 class="my-1">Users : </h2>
+                <h2 class="my-1">Membres : </h2>
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
