--- a/src/main/resources/templates/listetopos.html
+++ b/src/main/resources/templates/listetopos.html
@@ -14,6 +14,7 @@
             <div >
                 <h2 th:case="null">Aucun topo !</h2>
                 <div th:case="*">
+<!--                    TODO faire un test sur l'utilisateur connecté ou non (Liste des topos ou Mes topos) -->
                     <h2 class="my-3">Mes Topos</h2>
                     <div class="table-responsive-md">
                         <table class="table table-striped ">
