--- a/src/main/resources/templates/ajoutertopo.html
+++ b/src/main/resources/templates/ajoutertopo.html
@@ -9,40 +9,61 @@
     <H1 class="monTitre">Ajouter un topo</H1>
         <form action="#" th:action="@{/ajoutertopo}" th:object="${topo}" method="post">
             <form:errors path = "*" cssClass = "errorblock" element = "div" />
-            <label for="nomTopo">Nom</label>
-            <input type="text" th:field="*{nomTopo}" id="nomTopo" placeholder="nomTopo">
-            <!--<span th:if="${#fields.hasErrors('nomtopo')}" th:errors="*{nomTopo }"></span>-->
-            <label for="descritpionTopo">Description</label>
-            <input type="text" th:field="*{descritpionTopo}" id="descritpionTopo" placeholder="descritpionTopo">
-            <!--<span th:if="${#fields.hasErrors('descritpionTopo')}" th:errors="*{descritpionTopo}"></span>-->
-            <label for="dateParution">Date parution</label>
-            <input type="date" th:field="*{dateParution}" id="dateParution" placeholder="dateParution">
-            <!--<span th:if="${#fields.hasErrors('dateParution')}" th:errors="*{dateParution}"></span>-->
-            <label for="disponible">Disponibilité</label>
-            <input type="checkbox" th:field="*{disponible}" id="disponible" placeholder="disponible">
-
-
-
-            <label for="region">Région</label>
-            <select th:field="*{region}" id="region">
-                <option th:each="region : ${regions}" th:value="${region.regionId}" th:text="${region.nomRegion}")>Alpes </option>
-            </select>
-
+            <div  class="form-group row">
+                <label for="nomTopo" class="col-sm-2 col-form-label">Nom</label>
+                <div class="col-sm-10">
+                    <input type="text" th:field="*{nomTopo}" id="nomTopo" placeholder="nom du Topo">
+                    <span th:if="${#fields.hasErrors('nomTopo')}" th:errors="*{nomTopo }"></span>
+                </div>
+            </div>
+            <div  class="form-group row">
+                <label for="descritpionTopo" class="col-sm-2 col-form-label">Description</label>
+                <!--<input type="text" th:field="*{descritpionTopo}" id="descritpionTopo" placeholder="descritpionTopo">-->
+                <div class="col-sm-10">
+                    <textarea th:field="*{descritpionTopo}" class="form-control" id="descritpionTopo"
+                                                        placeholder="Descritpion" rows="3"></textarea>
+                    <span th:if="${#fields.hasErrors('descritpionTopo')}" th:errors="*{descritpionTopo}"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="region" class="col-sm-2 col-form-label">Région</label>
+                <div class="col-sm-6 col-lg-3">
+                    <select th:field="*{region}" class="form-control" id="region">
+                        <option th:each="region : ${regions}" th:value="${region.regionId}" th:text="${region.nomRegion}" )>
+                        Alpes
+                        </option>
+                    </select>
+                </div>
+            </div>
             <!--        <label for="region">Région</label>-->
             <!--        <select th:field="*{region}">-->
             <!--            <option disabled>Choisissez une région...</option>-->
             <!--            <option th:each="region : ${#numbers.sequence(0, 100)}" th:value="${i}" th:text="${i}" th:selected="${region.regionId==Topo.}")>Banana </option>-->
             <!--        </select>-->
+            <div  class="form-group row">
+                <label for="dateParution" class="col-sm-2 col-form-label">Date parution</label>
+                <div class="col-sm-10">
+                    <input type="date" class="form-control" th:field="*{dateParution}" id="dateParution" placeholder="dateParution">
+                    <span th:if="${#fields.hasErrors('dateParution')}" th:errors="*{dateParution}"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <!--<div class="form-check">-->
+                    <div class="col-sm-3">
+                        <label for="disponible" class="form-check-label">Disponibilité</label>
+                    </div>
+                    <div class="col-sm-3">
+                        <input type="checkbox" class="form-check-input" th:field="*{disponible}" id="disponible"
+                           placeholder="disponible">
+                    </div>
+                <!--</div>-->
+            </div>
 
-<!--            <input type="text" th:field="*{region}" id="region" placeholder="region" th:value="*{region.regionId}">-->
-<!--            <label for="utilisateur">Région</label>-->
-<!--            <input type="text" th:field="*{utilisateur}" id="utilisateur" placeholder="menbre" th:value="*{utilisateur.pseudo}">-->
             <input type="hidden" th:field="*{utilisateur.id}" th:value="2" name="idUtilisateur"/>
             <div th:if="${#fields.hasErrors('*')}">errors</div>
 
             <input type="submit" value="Valider">
         </form>
-
 </div>
 
 <hr>
