--- a/src/main/resources/templates/generique.html
+++ b/src/main/resources/templates/generique.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
 </head>
 <!-- Bootstrap CSS - A mettre en premier -->
-<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>-->
-<!--<link rel="stylesheet" href="../static/css/main.css">-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
+<link rel="stylesheet" href="../static/css/main.css">
 
 <body>
 <header >
@@ -56,7 +56,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuTopo">
                         <a class="dropdown-item" href="/listetopos/utilisateur">Mes Topos</a>
                         <a class="dropdown-item" href="/listetopos">Tous les Topos</a>
-                        <a class="dropdown-item" href="/topo">Ajouter un Topo</a>
+                        <a class="dropdown-item" href="/formulairetopo">Ajouter un Topo</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -72,6 +72,9 @@
 
         </div>
     </nav>
+
+
+
 </header>
 
 
@@ -81,6 +84,7 @@
 </footer>
 
 <!-- Respecter l'ordre des scripts ; jQuery first, then Popper.js, then Bootstrap JS, puis notre propre script.js -->
+<!--todo tenter un INCLUDE des fichier script -->
 <script type="text/javascript" src="/webjars/jquery/3.3.1/jquery.min.js/"></script>
 <script type="text/javascript" src="/webjars/popper.js/1.14.3/popper.min.js"></script>
 <script type="text/javascript" src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
